--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="programming.html">Programming Projects</a></li>
+							<li class="active"><a href="index.html">Programming Projects</a></li>
 							<li><a href="graphic_design.html">Graphic Design Projects</a></li>
 						</ul>
 						<ul class="icons">
