--- a/graphic_design.html
+++ b/graphic_design.html
@@ -61,7 +61,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="programming.html">Programming Projects</a></li>
+							<li><a href="index.html">Programming Projects</a></li>
 							<li class="active"><a href="graphic_design.html">Graphic Design Projects</a></li>
 						</ul>
 						<ul class="icons">
