--- a/graphic_design.html
+++ b/graphic_design.html
@@ -91,8 +91,11 @@
 									<div class="mySlides1">
 									  <img src="images\Card2.png" style="width:100%">
 									</div>
+
+									<div class="mySlides1">
+										<img src="images\Bifold_Mock-Up.png" style="width:100%">
+									</div>
 								  
-									<a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
 									<a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 								  </div>
 								  		
@@ -127,7 +130,6 @@
 										<div class="mySlides2">
 											<img src="images\Artboard+5.jpg" style="width:100%">
 										</div>
-										<a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
 										<a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 									  </div>
 									<br>
